Остается BookingControllers и пара ошибок + правки комментариев.